Fix grid-auto-rows to avoid cutting off content.

--- a/js/packages/quiz-embed/src/index.scss
+++ b/js/packages/quiz-embed/src/index.scss
@@ -266,7 +266,7 @@ $error-color: #e16969;
 
       display: grid;
       grid-template-columns: min-content 1fr;
-      grid-auto-rows: 1em;
+      grid-auto-rows: auto 1em;
       gap: 0.2em;  
     }
     
